# HH_and_SJ

./: main.py  pyproject.toml  vacancies.csv
abstract/: parser.py
base/: vacancies.py
parser/: parser_hh.py  parser_sj.py
vacancies/: catalog.py  hh.py  sj.py
